[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/CardGambit/CardGambit.gd" type="Script" id=1]
[ext_resource path="res://AllCards/Cards/Card.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "DoSort"
length = 0.6
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "switchtoBack"
}, {
"args": [  ],
"method": "changeCardOrder"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Card2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 203, 147 ), Vector2( 265, 147 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Card:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 78, 147 ), Vector2( 265, 147 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Card4:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 445, 147 ), Vector2( 265, 147 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Card3:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 326, 147 ), Vector2( 265, 147 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "MoveBack"
length = 0.6
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "switchtoFront"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Card2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 265, 147 ), Vector2( 203, 147 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Card:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 265, 147 ), Vector2( 78, 147 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Card4:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 265, 147 ), Vector2( 445, 147 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Card3:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 265, 147 ), Vector2( 326, 147 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Card2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 203, 147 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Card:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 78, 147 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Card4:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 445, 147 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Card3:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 326, 147 ) ]
}

[node name="CardGambit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
anchor_right = 1.0
margin_top = 27.0
margin_bottom = 74.0
bbcode_enabled = true
bbcode_text = "[center]Select a card to determine the outcome[/center]"
text = "Select a card to determine the outcome"

[node name="Card4" parent="." instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 265.0
margin_top = 147.0
margin_right = -335.0
margin_bottom = -333.0
CardType = "Failure"
CardSelect = false
CardSelectFunc = "gambit"
AutoFlipOnClick = true

[node name="Card3" parent="." instance=ExtResource( 2 )]
margin_left = 265.0
margin_top = 147.0
margin_right = 155.2
margin_bottom = -38.28
CardType = "Success"
CardSelect = false
CardSelectFunc = "gambit"
AutoFlipOnClick = true

[node name="Card2" parent="." instance=ExtResource( 2 )]
margin_left = 265.0
margin_top = 147.0
margin_right = 155.2
margin_bottom = -38.28
CardType = "Success"
CardSelect = false
CardSelectFunc = "gambit"
AutoFlipOnClick = true

[node name="Card" parent="." instance=ExtResource( 2 )]
margin_left = 265.0
margin_top = 147.0
margin_right = 155.2
margin_bottom = -38.28
CardType = "Success"
CardSelect = false
CardSelectFunc = "gambit"
AutoFlipOnClick = true

[node name="DoSort" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CardsAnims" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/DoSort = SubResource( 1 )
anims/MoveBack = SubResource( 2 )
anims/default = SubResource( 3 )

[node name="revelCard" type="Timer" parent="."]
wait_time = 1.5
[connection signal="timeout" from="DoSort" to="." method="_on_DoSort_timeout"]
[connection signal="animation_finished" from="CardsAnims" to="." method="_on_CardsAnims_animation_finished"]
[connection signal="timeout" from="revelCard" to="." method="_on_revelCard_timeout"]
